# dl_algs

./: .gitignore  README.md  pyproject.toml
dllib/: __init__.py
dllib/activations/: __init__.py  base.py  gelu.py  leaky_relu.py  relu.py  sigmoid.py  softmax.py  tanh.py
dllib/layers/: __init__.py  activation_layers.py  base.py  batch_norm_layer.py  conv_layer.py  conv_transpose_layer.py  dense_layer.py  dropout_layer.py  embedding_layer.py  flatten_layer.py  gru_layer.py  layer_norm.py  lstm_layer.py  max_pool_layer.py  mean_pooling_layer.py  multi_head_attention_layer.py  reshape_layer.py  resize_layer.py  rnn_layer.py  self_attention_layer.py  sequence_layer.py  time_distributed_dense_layer.py  transformer_layer.py
dllib/losses/: __init__.py  base.py  bce.py  cross_entropy.py  mse.py  mse_loss.py
dllib/model/: __init__.py  base.py  cnn.py  gan.py  gru.py  lstm.py  mlp.py  rnn.py  transformer.py  vae.py
dllib/optimizers/: __init__.py  adam.py  base.py  sgd.py  sgd_momentum.py
dllib/trainers/: __init__.py  base.py  simple_trainer.py
dllib/utils/: __init__.py  conv.py  decorators.py  device.py  metrics.py  norm.py  ops.py  time_series.py  training.py
lab1/: README.md  notebook.ipynb
lab2/: README.md  notebook.ipynb
lab3/: README.md  notebook.ipynb
lab4/: README.md  main.py
lab5/: README.md  notebook.ipynb
