[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dllib"
version = "0.1.0"
description = "Deep Learning Library for labs"
requires-python = ">=3.10"

dependencies = [
    "certifi==2025.8.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "fsspec==2025.9.0",
    "Jinja2==3.1.6",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.6",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "ucimlrepo==0.0.7",
]

[tool.setuptools.packages.find]
include = ["dllib"]
